--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.nopoint.midpoint.fragments.MapFragment">
 
     <!-- Remove later -->
@@ -14,9 +15,29 @@
         android:text="test"
         />
 
+
     <!--Map content-->
     <include layout="@layout/map_content" />
 
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_map_intent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="64dp"
+        app:tint="@color/color_white"
+        app:srcCompat="@drawable/ic_directions"
+        app:backgroundTint="@color/orange"
+        app:layout_anchor="@id/bottom_sheet"
+        app:layout_dodgeInsetEdges="bottom"
+        app:layout_anchorGravity="top|end"
+        android:visibility="gone"
+        />
+
     <!-- Adding bottom sheet after main content -->
-    <include layout="@layout/bottom_sheet" />
+    <include
+        layout="@layout/bottom_sheet"/>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
